<resources>
    <string name="app_name">ICT2105_Prototype</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="charity">Charity</string>
    <string name="back">Back</string>
    <string name="title_browse">Browse</string>
    <string name="title_category">Category</string>
    <string name="title_donate">Donate</string>
    <string name="title_organization">Charity Organizations</string>
    <string name="title_me">Me</string>
    <string name="title_chat">Chat</string>
    <string name="title_vert_menu">Vertical Menu</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_save">Save</string>
    <string name="title_request">Request</string>
    <string name="item_name">Item Name</string>
    <string name="item_detail">Item Details</string>
    <string name="item_condition">Item Condition</string>
    <string name="condition">Item Condition:</string>
    <string name="detail">Item Details:</string>
    <string name="list_it">List It</string>
    <string name="radio_new">New</string>
    <string name="radio_used">Used</string>
    <string name="preferred_location">Preferred Meet-Up</string>
    <string name="location">Location</string>
    <string name="meet_up">Meet-Up @</string>
    <string name="pick_up">Pick-Up @</string>
    <string name="pick_up_from">Pick-Up From: </string>
    <string name="default_bio">This is my bio</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bio">Bio</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="books">Books</string>
    <string name="furniture">Furniture</string>
    <string name="electronic_devices">Electronic Devices</string>
    <string name="clothes">Clothes</string>
    <string name="shoes">Shoes</string>
    <string name="bags">Bags</string>
    <string name="change_photo">Change Profile Photo</string>
    <string name="request_assistance">Request Assistance</string>
    <string name="accept">Accept</string>
</resources>
