<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_request"
        android:icon="@drawable/ic_assignment_black_24dp"
        app:showAsAction="always"
        android:title="@string/title_request"/>

    <item
        android:id="@+id/action_chat"
        android:icon="@drawable/ic_chat_bubble_black_24dp"
        app:showAsAction="always"
        android:title="@string/title_chat"/>

    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_more_vert_black_24dp"
        app:showAsAction="always"
        android:title="@string/title_vert_menu">

        <menu>
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/logout" />
        </menu>

    </item>

</menu>