<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ict2105.ict2105_prototype.ui.Browse.HomeFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_browse" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.ict2105.ict2105_prototype.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_organization"
        android:name="com.ict2105.ict2105_prototype.ui.organization.CharityOrganizationFragment"
        android:label="@string/title_organization"
        tools:layout="@layout/fragment_charity_organization" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.ict2105.ict2105_prototype.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />
</navigation>